webapp/k8s_files/webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-deployment
  labels:
    app: hello-world
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
        - name: hello-world
          image: yarinlaniado/helloworld-webapp:1.0.23
          imagePullPolicy: "Always"
          ports:
            - containerPort: 80
