webapp/k8s_files/webapp-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello-world-service
spec:
  selector:
    app: hello-world
  ports:
    - protocol: TCP
      port: 32300
      targetPort: 80
